# stpetersburg_prices

./: .gitignore  pyproject.toml  readme.md  requirements.txt
data/processed/: model_predictions.xlsx  predictions.xlsx  test_data.csv  train_data.csv
models/: reg_model.pkl  regressor.pkl
notebooks/: eda.ipynb  modelagem.ipynb  stprices.ipynb
scr/: data_preprocessing.py  evaluate_model.py  predict.py  train.py  train_model.py  utils.py
scr/predict/: predict.py
scr/train/: train.py
