[tool.poetry]
name = "stpetersburg-prices"
version = "0.1.0"
description = "Regression Project with XGBoost"
authors = ["datalopes1 <datalopes1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
category-encoders = "^2.6.4"
feature-engine = "^1.8.2"
optuna = "^4.1.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
